<resources>
    <string name="app_name">Lume</string>
    <string name="map_activity_name">Place label on the card</string>
    <string name="login_placeholder">Login…</string>
    <string name="password_placeholder">Password…</string>
    <string name="btn_login">Enter</string>
    <string name="repeat_password_placeholder">Repeat password…</string>
    <string name="email_placeholder">Email…</string>
    <string name="btn_registration">Registration</string>
    <string name="registration">Registration</string>
    <string name="logIn">Login</string>


    <string name="server_error">Error on the server!</string>
    <string name="authorization_error">Error of the authorization!</string>
    <string name="registration_error">Error of the registration!</string>
    <string name="connection_error">Error of the connection!</string>
    <string name="password_error">Error of the input the password!</string>

    <string name="not_coincide_passwords">Passwords do not coincide!</string>
    <string name="email_already_exist">This email already exists!</string>
    <string name="login_already_exist">This login already exists!</string>
    <string name="no_connection">There is no Internet-connection!</string>
    <string name="relogin">Please, visit more lately.</string>
    <string name="refill_password_field">Current password is indicated erroneously!</string>

    <string name="incorrectly_introduce_login_or_password">Invalid login or password!</string>
    <string name="btn_ok">OK</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>


    <string name="menu_item_profile">Profile</string>
    <string name="menu_item_contacts">Contacts</string>
    <string name="menu_item_messages">Messages</string>
    <string name="menu_item_boards">Boards</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_reminder">Reminder</string>
    <string name="menu_item_participants">Participants</string>

    <string name="profile_title_place_living">Place of the residence</string>
    <string name="profile_title_birthday">Birthday</string>
    <string name="profile_title_place_study">Education</string>
    <string name="profile_title_place_work">Place of the work</string>
    <string name="profile_title_working_email">Email for the connection</string>

    <string name="user_add_into_contacts">Add into contacts</string>
    <string name="user_remove_from_contacts">Remove from contacts</string>
    <string name="user_send_message">Send message</string>

    <string name="search_new_contacts">Search new contacts…</string>
    <string name="search_in_contacts">Search in contacts…</string>
    <string name="search_in_dialogs">Search in dialogs…</string>
    <string name="search">Search:</string>
    <string name="search_empty">Search</string>

    <string name="my_contacts">My contacts</string>
    <string name="settings">Settings</string>


    <string name="dialog_item_open">Open</string>
    <string name="dialog_item_upload">Load from the gallery</string>
    <string name="dialog_item_create">To photograph</string>
    <string name="dialog_header_photo">The photograph</string>

    <string name="change">Change</string>


    <string name="editName">Name</string>
    <string name="editSurname">Surname</string>
    <string name="editBirthday">Birthday</string>
    <string name="editPrevPassword">Old password</string>
    <string name="editNewPassword">New password</string>
    <string name="editCity">City</string>
    <string name="editCountry">Country</string>
    <string name="editStudy">Study</string>
    <string name="editWork">Work</string>
    <string name="editEmail">Email</string>
    <string name="editWorkEmail">Email for connection</string>


    <string name="leave_board">Leave board</string>
    <string name="leave_card">Leave card</string>
    <string name="ask_confirmation">Are you sure?</string>


    <string name="menu_action_settings">Settings</string>
    <string name="menu_action_change_color">Color</string>
    <string name="menu_action_move">Move</string>
    <string name="menu_action_invite">Invite</string>
    <string name="menu_action_leave">Leave</string>

    <string name="create_board">Create new board</string>
    <string name="enter_board_name">Enter name…</string>
    <string name="enter_board_description">Enter descripiton…</string>

    <string name="create_card">Create new card</string>
    <string name="enter_card_name">Enter name…</string>
    <string name="enter_card_description">Enter descripiton…</string>


    <string name="create_column">Create column</string>
    <string name="enter_column_name">Enter name…</string>
    <string name="change_column_name">Change column name</string>

    <string name="create_checkbox">Create checkbox</string>
    <string name="enter_checkbox_name">Enter task name…</string>


    <string name="no_columns_message">Create column</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>

    <string name="go_search">Search contacts</string>
    <string name="enter_name_login_surname">Enter part of name, login…</string>


    <string name="choose_color">Choose color</string>

    <string name="welcome_text">You are successfully registered. \n\nNow enter information about yourself, on this page or in the &quot;Settings&quot; section. \n\nWe also recommend contacting the answering machine for any questions (question mark in the side menu). \n\nClick anywhere to continue.</string>

    <string name="card_fab_menu_bg">Change background</string>
    <string name="card_fab_menu_date">Set due date</string>
    <string name="card_fab_menu_checkbox">Add checkbox</string>
    <string name="card_fab_menu_map">Show on the map</string>

    <string name="card_edit_comment_hint">Enter your comment here…</string>

    <string name="settings_personal_information">Personal information</string>
    <string name="settings_account_information">Account information</string>

    <string name="create_marker">Create new marker</string>

    <string name="no_contacts">Add your first contacts</string>
    <string name="no_dialogs">You still do not have the active dialogues</string>
    <string name="no_boards">Place your first project</string>


</resources>
