<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigationContacts"
            android:orderInCategory="1"
            android:title="@string/menu_item_contacts"
            android:icon="@drawable/ic_group_black_24dp"/>
        <item
            android:id="@+id/navigationMessages"
            android:orderInCategory="1"
            android:title="@string/menu_item_messages"
            android:icon="@drawable/ic_mail_black_24dp"/>
        <item
            android:id="@+id/navigationBoards"
            android:orderInCategory="1"
            android:title="@string/menu_item_boards"
            android:icon="@drawable/ic_dns_black_24dp"/>
        <item
            android:id="@+id/navigationSettings"
            android:orderInCategory="1"
            android:title="@string/menu_item_settings"
            android:icon="@drawable/ic_settings_black_24dp"/>
        <item
            android:id="@+id/navigationLogout"
            android:orderInCategory="1"
            android:title="@string/menu_item_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"/>
    </group>


</menu>