<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_move"
        android:orderInCategory="100"
        android:title="@string/menu_action_move"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_invite"
        android:orderInCategory="100"
        android:title="@string/menu_action_invite"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_leave"
        android:orderInCategory="100"
        android:title="@string/menu_action_leave"
        app:showAsAction="never"/>
</menu>