<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/loginRegistration"
        android:hint="@string/login_placeholder"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordRegistration"
        android:hint="@string/password_placeholder"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/repeatPasswordRegistration"
        android:hint="@string/repeat_password_placeholder"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/emailRegistration"
        android:hint="@string/email_placeholder"/>

    <Button
        android:text="@string/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegistration"/>
</LinearLayout>