<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/loginLogIn"
        android:maxLines="1"
        android:hint="@string/login_placeholder"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordLogIn"
        android:hint="@string/password_placeholder"/>

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login" />
</LinearLayout>